--- a/src/mmgd.scss
+++ b/src/mmgd.scss
@@ -89,6 +89,7 @@ section {
 
 p {
   position: fixed;
+  z-index: 1000;
   opacity: 0;
   top: 40%;
   margin-top: - $default-font-size * 3;
